<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sgpgthesis.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_drinkware"
        android:name="com.example.sgpgthesis.ui.drinkware.DrinkWareFragment"
        android:label="@string/drinkware"
        tools:layout="@layout/fragment_drinkware" />

    <fragment
        android:id="@+id/nav_others"
        android:name="com.example.sgpgthesis.ui.others.OthersFragment"
        android:label="@string/others"
        tools:layout="@layout/fragment_others" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.sgpgthesis.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_aboutUs"
        android:name="com.example.sgpgthesis.AboutUsFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.sgpgthesis.CartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_cart" />
</navigation>